--- a/mysite/templates/polls/home.html
+++ b/mysite/templates/polls/home.html
@@ -228,7 +228,7 @@
             <!-- Logo 區域 -->
             <div class="logo-section">
                 <h1>奶茶尋</h1>
-                <p class="subtitle">找到你最愛的奶茶店</p>
+                <p class="subtitle">找到你最愛的奶茶</p>
             </div>
 
             <!-- 搜尋區域 -->
